bannaer section complete here

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!-- banner section starts here -->
     <header class="banner-container">
         <div class="banner-content">
             <p>Happy New Year</p>
-            <h2>New Year Party Celebration</h2>
+            <h2>New Year Party <br> Celebration</h2>
         </div>
     </header>
+    <!-- banner section ends here -->
 
     <main>
-
+       
     </main>
 
     <footer>
