second section done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
     <!-- banner section ends here -->
 
     <main>
-       
+       <!-- 65% off starts here -->
+        <section class="second-section-container">
+            <div class="second-section-content">
+                <h1>65% OFF</h1>
+                <p>OUR HOLIDAY DEALS ARE BETTER</p>
+                <h3>ALL CATEGORIES</h3>
+            </div>
+
+            <div class="second-image-container">
+                <img src="./new-year-offer-resources-main/images/New Year Photo.png" alt="">
+            </div>
+
+        </section>
+       <!-- 65% off ends here -->
     </main>
 
     <footer>
