midnight section done here

--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
 
         </section>
        <!-- 65% off ends here -->
+
+       <!-- midnight party section starts here -->
+        <section class="midnight-party-container">
+            <div class="midnight-left-content">
+                <h1>Welcome to midnight party</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <span id="midnight-btn">Join Now</span>
+            </div>
+            <div class="midnight-right-content">
+
+            </div>
+        </section>
+       <!-- midnight party section ends here -->
     </main>
 
     <footer>
