new park hotel content done here

--- a/index.html
+++ b/index.html
@@ -40,10 +40,25 @@
                 <span id="midnight-btn">Join Now</span>
             </div>
             <div class="midnight-right-content">
-
+                <img src="./new-year-offer-resources-main/icons/" alt="">
             </div>
         </section>
        <!-- midnight party section ends here -->
+
+       <!-- park hotel starts here -->
+        <section class="park-hotel-container">
+            <div class="park-hotel-content">
+                <p>Place: New Park Hotel </p>
+                <p>Date: 31 December Night 2023</p>
+                <p>Time: Evening 7.30 pm to 12.30 am</p>
+                <div class="park-content-button">
+                    <span>Join Now</span>
+                </div>
+            </div>
+
+        </section>
+       <!-- park hotel ends here -->
+
     </main>
 
     <footer>
