comming soon section ends here

--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@
         </section>
        <!-- park hotel ends here -->
 
+       <!-- coming soon starts here -->
+        <section class="coming-soon-container">
+            <div class="comming-soon-content">
+                <p class="comming-first-p">NEW BEST OFFER</p>
+                <h2>Coming Soon</h2>
+                <p class="comming-second-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+
+            <div class="comming-soon-img">
+                <img src="../new-year-offer-resources-main/images/Ellipse 1.png" alt="">
+            </div>
+
+            <div class="comming-soon-2024">
+                <h1>2024</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="../new-year-offer-resources-main/images/Group 96.png" alt="">
+            </div>
+
+        </section>
+       <!-- coming soon ends here -->
+
     </main>
 
     <footer>
