holiday section added here

--- a/index.html
+++ b/index.html
@@ -80,6 +80,31 @@
         </section>
        <!-- coming soon ends here -->
 
+        <!-- holiday section starts here -->
+         <section class="holiday-section-container">
+            <div class="holiday-text-container">
+                <p>WHAT IS FUNCTIONAL</p>
+                <h1> <span id="holiday">Holidays</span> Sale 50%</h1>
+                <p class="holiday-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+            </div>
+            <div class="solid-color"></div>
+            <div class="gift-box">
+                <img src="./new-year-offer-resources-main/images/Group 75.png" alt="">
+                <div class="girl-container">
+                    <img src="./new-year-offer-resources-main/images/Group 70.png" alt="">
+                </div>  
+                <div class="discount">
+                    <img src="./new-year-offer-resources-main/images/Group 44.png" alt="">
+                </div>
+            </div>
+            
+         </section>
+        <!-- holiday section ends here -->
+
+
+
+
     </main>
 
     <footer>
