input and button in ine line with css is ends here

--- a/index.html
+++ b/index.html
@@ -98,9 +98,23 @@
                     <img src="./new-year-offer-resources-main/images/Group 44.png" alt="">
                 </div>
             </div>
-            
          </section>
         <!-- holiday section ends here -->
+
+        <!-- subscrbie newsletter starts here -->
+         <section class="subscribe-container">
+            <div class="subscribe-content">
+                <img src="./new-year-offer-resources-main/images/Group 61.png" alt="">
+                <h1>Subscribe Newsletter</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <div class="subscribe-button-container">
+                    <input type="email" placeholder="user@gmail.com" class="email-input">
+                    <button class="subscribe-button">Subscribe</button>
+                </div>
+            </div>
+
+         </section>
+        <!-- subscrbie newsletter ends here -->
 
 
 
