display grid item uploaded

--- a/index.html
+++ b/index.html
@@ -116,8 +116,37 @@
          </section>
         <!-- subscrbie newsletter ends here -->
 
+        <!-- portfolio section starts here -->
+         <section class="portfolio-section-container">
+            <div class="portfolio-section-content">
+                <p class="portfolio-para">THE BEST GIFTS</p>
+                <h1>Our Awesome Portfolio</h1>
+                <p class="portfolio-para-2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
 
+            <div class="portfolio-items">
+                <div class="item">
+                    <img src="./new-year-offer-resources-main/images/Rectangle 3.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="./new-year-offer-resources-main/images/Rectangle 4.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="./new-year-offer-resources-main/images/Rectangle 5.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="./new-year-offer-resources-main/images/Rectangle 6.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="./new-year-offer-resources-main/images/Rectangle 7.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="./new-year-offer-resources-main/images/Rectangle 8.png" alt="">
+                </div>
+            </div>
 
+         </section>
+        <!-- portfolio section ends here -->
 
     </main>
 
