--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -147,12 +148,43 @@
 
          </section>
         <!-- portfolio section ends here -->
-
     </main>
+<!-- footer section starts here -->
+    <footer class="footer-container">
+        <div class="footer-first-section">
+            <div class="left-section">
+                <p>44, Big Building Roosevelt Street <br>
+                Beach Gardens Florida 33410</p>
+            </div>
+            <div class="right-section">
+                <span class="contact">
+                    <i class="fa-solid fa-phone"></i>
+                    <p>+00 123 584 124</p>
+                </span>
+                <span class="contact">
+                    <i class="fa-brands fa-chrome"></i>
+                    <p>www.website.com</p>
+                </span>
+            </div>
+        </div>
+        <hr>
 
-    <footer>
+        <div class="social-icons">
+            <img src="./new-year-offer-resources-main/icons/Facebook.png" alt="">
+            <img src="./new-year-offer-resources-main/icons/Instagram.png" alt="">
+            <img src="./new-year-offer-resources-main/icons/Linkedin.png" alt="">
+            <img src="./new-year-offer-resources-main/icons/Twitter.png" alt="">
+        </div>
+
+        <hr>
+
+        <div class="footer-last-text">
+            <p>2017, All Rights Reserved.</p>
+            <p>Unsubscribe</p>
+
+        </div>
 
     </footer>
-    
+    footer section ends here
 </body>
 </html>
