new year landing page design complete

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
             </div>
             <div class="right-section">
                 <span class="contact">
-                    <i class="fa-solid fa-phone"></i>
+                    <p><i class="fa-solid fa-phone"></i></p>
                     <p>+00 123 584 124</p>
                 </span>
                 <span class="contact">
-                    <i class="fa-brands fa-chrome"></i>
+                    <p><i class="fa-brands fa-chrome"></i></p>
                     <p>www.website.com</p>
                 </span>
             </div>
